[package]
name = "roaring-bitmap"
version = "0.1.0"
edition = "2021"
authors = ["Suchith J N"]

[dependencies]

[dev-dependencies]
pretty_assertions = "1.4.0"
quickcheck = "1"
quickcheck_macros = "1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "roaring_bitset"
harness = false